add homework 18: fixed after review